--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,6 +96,7 @@ nav a {
   color: #1a1a1a;
 }
 
+
 #info {
   display: flex;
   flex-direction: column;
@@ -141,6 +142,73 @@ nav a {
   font-size: 18px;  
   display: flex;  
   justify-content: center;
+}
+
+
+.form {
+    width: 350px;
+    padding: 20px;
+    background-color: #2c3e50;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form--fieldset {
+    border: none;
+    padding: 0;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    color: #ecf0f1;
+    font-weight: bold;
+}
+
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #bdc3c7;
+    border-radius: 5px;
+    background-color: #ecf0f1;
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #3498db;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #2980b9;
+}
+
+p {
+    color: #ecf0f1;
+    text-align: center;
+}
+
+a {
+    color: #3498db;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.notice {
+    color: #e74c3c;
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
 }
 
 @media screen and (min-width: 960px) {
