--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,6 +151,11 @@ nav a {
     background-color: #2c3e50;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 40px auto;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .form--fieldset {
@@ -262,6 +267,14 @@ a:hover {
 @media screen and (min-width: 960px) {
   body {
     background-image: url('../images/site/checkerboard.jpg');    
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 80vh;
+    justify-content: center;
   }
 
   body, #wrapper {
