--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -2,62 +2,65 @@
   <h1>
     <%= title %>
   </h1>
-  <% } else { res.redirect('/') } %>
+<% } %>
 
+<% if (messages && messages.length) { %>
+  <div class="flash-message">
+    <% messages.forEach(function(msg) { %>
+      <p><%= msg %></p>
+    <% }) %>
+  </div>
+<% } %>
 
+<% if (errors && errors.length) { %>
+  <ul class="notice">
+    <% errors.forEach(error => { %>
+      <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
 
-    <% if (errors) { %>
-      <ul class="notice">
-        <% errors.array().forEach(error=> { %>
-          <li>
-            <%= error.msg %>
-          </li>
-          <% }) %>
-      </ul>
-      <% } %>
+<form class="form addvehicle-form" method="post" action="/inv/add-inventory" novalidate>
+  <p>*All fields are required</p>
+  <fieldset class="form--fieldset addvehicle-form--fieldset">
+    <label for="classification_id">Classification:</label>
+    <%- classificationList %>
 
-        <form class="form addvehicle-form" method="post" action="/inv/addvehicle">
-          <p>*All fields are required</p>
-          <fieldset class="form--fieldset addvehicle-form--fieldset">
-            <label for="classification_id">Classification:</label>
-            <select name="classification_id" id="classification_id">
-              <%- classSelect %>
-            </select>
+    <label for="inv_make">Make:</label>
+    <input type="text" id="inv_make" name="inv_make" placeholder="Min of 3 characters"
+      value="<%= typeof inv_make !== 'undefined' ? inv_make : '' %>" minlength="3" required pattern=".{3,}">
 
-            <label for="inv_make">Make:</label>
-            <input type="text" id="inv_make" name="inv_make" placeholder="Min of 3 characters"
-              value="<%= locals.inv_make %>" minlength="3" required>
+    <label for="inv_model">Model:</label>
+    <input type="text" id="inv_model" name="inv_model" placeholder="Min of 3 characters"
+      value="<%= typeof inv_model !== 'undefined' ? inv_model : '' %>" minlength="3" required pattern=".{3,}">
 
-            <label for="inv_model">Model:</label>
-            <input type="text" id="inv_model" name="inv_model" placeholder="Min of 3 characters"
-              value="<%= locals.inv_model %>" minlength="3" required>
+    <label for="inv_year">Year:</label>
+    <input type="number" id="inv_year" name="inv_year" placeholder="4-digit year"
+      value="<%= typeof inv_year !== 'undefined' ? inv_year : '' %>" min="1900" max="2099" required pattern="^\d{4}$">
 
-            <label for="inv_year">Year:</label>
-            <input type="text" id="inv_year" name="inv_year" placeholder="4-digit year" value="<%= locals.inv_year %>"
-              pattern="^\d{4}$" required>
+    <label for="inv_description">Description:</label>
+    <textarea id="inv_description" name="inv_description" cols="40" rows="5" required><%= typeof inv_description !== 'undefined' ? inv_description : '' %></textarea>
 
-            <label for="inv_description">Description:</label>
-            <textarea id="inv_description" name="inv_description" cols="40" rows="5"
-              required><%= locals.inv_description %></textarea>
+    <label for="inv_image">Image path:</label>
+    <input type="text" id="inv_image" name="inv_image"
+      value="<%= typeof inv_image !== 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>" required>
 
-            <label for="inv_image">Image path:</label>
-            <input type="text" id="inv_image" name="inv_image" value="/images/vehicles/no-image.png" required>
+    <label for="inv_thumbnail">Thumbnail path:</label>
+    <input type="text" id="inv_thumbnail" name="inv_thumbnail"
+      value="<%= typeof inv_thumbnail !== 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>" required>
 
-            <label for="inv_thumbnail">Thumbnail path:</label>
-            <input type="text" id="inv_thumbnail" name="inv_thumbnail" value="/images/vehicles/no-image.png" required>
+    <label for="inv_price">Price:</label>
+    <input type="number" id="inv_price" name="inv_price" placeholder="Decimal or integer"
+      value="<%= typeof inv_price !== 'undefined' ? inv_price : '' %>" min="0" step="0.01" required>
 
-            <label for="inv_price">Price:</label>
-            <input type="number" id="inv_price" name="inv_price" placeholder="Decimal or integer"
-              value="<%= locals.inv_price %>" required>
+    <label for="inv_miles">Miles:</label>
+    <input type="number" id="inv_miles" name="inv_miles" placeholder="Digits only"
+      value="<%= typeof inv_miles !== 'undefined' ? inv_miles : '' %>" min="0" step="1" required>
 
-            <label for="inv_miles">Miles:</label>
-            <input type="number" id="inv_miles" name="inv_miles" placeholder="Digits only"
-              value="<%= locals.inv_miles %>" step="1" required>
+    <label for="inv_color">Color:</label>
+    <input type="text" id="inv_color" name="inv_color" placeholder="Vehicle color"
+      value="<%= typeof inv_color !== 'undefined' ? inv_color : '' %>" required>
 
-            <label for="inv_color">Color:</label>
-            <input type="text" id="inv_color" name="inv_color" placeholder="Vehicle color"
-              value="<%= locals.inv_color %>" required>
-
-            <input type="submit" name="submit" value="Add Vehicle">
-          </fieldset>
-        </form>        
+    <input type="submit" name="submit" value="Add Vehicle">
+  </fieldset>
+</form>
