--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,6 +53,11 @@ nav a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #17446c;
+  text-decoration: underline;
+}
+
 #hero {
   height: 400px;
   background: center center no-repeat url("../images/vehicles/delorean.jpg");
@@ -66,7 +71,7 @@ nav a {
 #overlay {
   margin-top: 80px;
   position: relative;
-  background-color: #c2c2c2; /* Adjusted for better contrast */
+  background-color: #c2c2c2;
   opacity: 0.7;
   max-width: 250px;
   height: 150px;
@@ -145,18 +150,16 @@ nav a {
 }
 
 
+
 .form {
-    width: 350px;
-    padding: 20px;
-    background-color: #2c3e50;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 40px auto;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 0);
+  max-width: 30em;
+  margin: 0 auto;
+  font-size: 1.2em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color:#2c3e50;
+  border-radius: 5px;
 }
+
 
 .form--fieldset {
     border: none;
@@ -286,7 +289,7 @@ a:hover {
     flex-direction: row;
   }
 
-   .item-image {
+  .item-image {
     width: 200px;
   }
 
@@ -294,7 +297,7 @@ a:hover {
   border-radius: 10px;
   border: 5px solid #2c5b6e; /* Slightly darker teal for border */
   padding: 10px;
-}
+ }
 
   #overlay {    
     max-width: 260px;
