--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -33,4 +33,4 @@
             <noscript>JavaScript must be enabled to use this page.</noscript>
           </div>
 
-          <script src="/js/inventory.js"></script>
+          <script src="/public/js/inventory.js"></script>
