week 5 in progress

--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -15,8 +15,8 @@
   <% } %>
   
   <div class="management-links">
-    <a href="/inv/addclass">Add New Classification</a>
-    <a href="/inv/addvehicle">Add New Vehicle</a>
+    <a href="/inv/add-classification">Add New Classification</a>
+    <a href="/inv/add-inventory">Add New Vehicle</a>
   </div>
   
   <p>Select a classification to view inventory:</p>
