--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -26,11 +26,11 @@
             <div class="form--fieldset">
               <p>Select a classification to view inventory:</p>
               <select name="classification_id" id="classificationList">
-                <%- classSelect %>
+                <%- classificationSelect %>
               </select>
             </div>
             <table id="inventoryDisplay"></table>
             <noscript>JavaScript must be enabled to use this page.</noscript>
           </div>
 
-          <script src="/public/js/inventory.js"></script>
+          <script src="/js/inventory.js"></script>
