--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,11 @@
         <a href="/" title="Return to the home page">CSE Motors</a>
     </span>
     <div id="tools">
-        <a title="Click to log in" href="/account/login">My Account</a>
+        <% if (locals.loggedin) { %>
+            <span>Welcome, <%= locals.accountData.account_firstname %></span>
+            <a href="/account/logout">Logout</a>
+            <% } else { %>
+                <a title="Click to log in" href="/account/login">My Account</a>
+        <% } %>
     </div>
 </header>
