--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,29 +1,35 @@
 <% if (title) { %>
-    <h1><%= title %></h1>
-  <% } else {
-    res.redirect('/')
-  } %>
-  
-  <%- messages() %>
-  
-  <% if (errors) { %>
-    <ul class="notice">
-   <% errors.array().forEach(error => { %>
-     <li><%= error.msg %></li>
-  <%  }) %>
-   </ul>
-  <% } %>
-  
-  <div class="management-links">
-    <a href="/inv/add-classification">Add New Classification</a>
-    <a href="/inv/add-inventory">Add New Vehicle</a>
-  </div>
-  
-  <p>Select a classification to view inventory:</p>
+  <h1><%= title %></h1>
+<% } else { res.redirect('/') } %>
 
-<form class="form--fieldset" action="">
-  <label for="classification_id">Classification:</label>
- <select name="classification_id" id="classification_id">
-  <%- classSelect %>
-</select>
+<%- messages() %>
+
+<% if (errors) { %>
+  <ul class="notice">
+    <% errors.array().forEach(error => { %>
+      <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
+
+<% if (locals.loggedin && locals.accountData) { %>
+  <h2>Welcome <%= locals.accountData.account_firstname %></h2>
+
+  <p>
+    <a href="/account/update/<%= locals.accountData.account_id %>">Update Account Information</a>
+  </p>
+  <% if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
+    <h3>Inventory Management</h3>
+    <p>
+      <a href="/inv/">Go to Inventory Management</a>
+    </p>
+  <% } %>
+<% } %>
+
+<div class="management-links">
+  <a href="/inv/add-classification">Add New Classification</a>
+  <a href="/inv/add-inventory">Add New Vehicle</a>
+</div>
+
+  </select>
 </form>
